--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "This is a test directory to learn git and node",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite":"lite-server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/ompathak23/git-test/issues"
   },
-  "homepage": "https://github.com/ompathak23/git-test#readme"
+  "homepage": "https://github.com/ompathak23/git-test#readme",
+  "dependencies": {
+    "lite-server": "^2.6.1",
+    "save-dev": "0.0.1-security"
+  }
 }
